added session_ids to main logged in endpoint...renamed session_id vars to session_code to accomodate ACTUAL session_ids

--- a/templates/session.html
+++ b/templates/session.html
@@ -11,7 +11,7 @@
 	  {% block content %}
 	  	{% if g.session_id %}
 		  <h2>Game Code</h2>
-		  <h3>{{ g.session_id }}</h3>
+		  <h3>{{ g.session_code }}</h3>
 		{% endif %}
 	  {% endblock %}
 
