added backend logic enabling users to create&join separate rooms to keep messages etc. partitioned

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -31,8 +31,8 @@
 
     <div style="display:none" id="joinGame">
       <form action="" method="POST">
-        <label for="sessionId">Session ID</label>
-        <input name="sessionId" id="sessionId" required><br>
+        <label for="session_code">Session ID</label>
+        <input name="session_code" id="session_code" required><br>
         <label for="username">Username</label>
         <input name="username" id="username" required><br>
         <label for="password">Password</label>
