added support for sending board states to database and syncing them across players using websockets and session attributes. still not working properly. Mongo requirement to store keys as strings seems to be resorting columns and shifting board states.

--- a/templates/session.html
+++ b/templates/session.html
@@ -64,10 +64,11 @@
               {% endfor %}
             </tr>
           {% for row in session.get('board_state') %}
-            <tr>
+            <tr id = {{ row }} >
                 <td class="board"><div class="square"><div class="content">{{ row }}</div></div></td>
             {% for cell in session.get('board_state')[row] %}
-                <td class="board"><div class="square"><div class="content">{{ session.get('board_state')[row][cell] }}</div></div></td>
+                {% set cellContent =  session.get('board_state')[row][cell] %}
+                <td class="board" id= {{ cell }} ><div class="square"><div class="content">{{ cellContent }}</div></div></td>
             {% endfor %}
             </tr>
           {% endfor %}
@@ -81,10 +82,19 @@
 
       function loadData(target) {
       target.innerHTML = window.transfer_payload;
-      delete window.transfer_payload;
       var origin = document.getElementsByClassName("selected")[0]
+      var origin_coords = [origin.parentNode.parentNode.parentNode.id,origin.parentNode.parentNode.id];
+      var target_coords = [target.parentNode.parentNode.parentNode.id,target.parentNode.parentNode.id];
+      console.log
       origin.classList.remove("selected");
       origin.innerHTML = "";
+      socket.emit( 'board state', {
+            origin_cell : origin_coords,
+            destination_cell : target_coords,
+            moved_piece : window.transfer_payload
+          });
+      console.log('transfer');
+      delete window.transfer_payload;
       }
 
       function handleData(evt) {
@@ -180,6 +190,7 @@
 
       socket.on( 'my response', function( msg ) {
         console.log( msg )
+        console.log("breakpoint")
         if( typeof msg.user_name !== 'undefined' ) {
           $( 'div.message_holder' ).append( '<div><b style="color: #000">'+msg.user_name+'</b> '+msg.message+'</div>' )
         }
