created external js file. removed loop where websockets were calling each other...add additional listener to sync opponents board state in their cookies.

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,26 +5,7 @@
   </head>
   <body>  
     <div id="firstChoice">
-      <script> 
-
-        function showForm(choice) {
-          var joinForm = document.getElementById("joinGame");
-          var createForm = document.getElementById("createGame");
-          var choiceButtons = document.getElementById("firstChoice");
-
-          choiceButtons.style.display = choiceButtons.style.display == "none" ? "block" : "none";
-
-          switch(choice) {
-            case "create":
-              createForm.style.display = createForm.style.display == "none" ? "block" : "block";
-              break;
-            case "join":
-              joinForm.style.display = joinForm.style.display == "none" ? "block" : "block"; 
-              break;
-            }
-          }
-
-      </script>
+      <script src="/static/login.js"></script>
       <Button onclick="showForm('create')">Create Session</Button>
       <Button onclick="showForm('join')">Join Session</Button>
     </div>
