--- a/templates/session.html
+++ b/templates/session.html
@@ -219,16 +219,15 @@
           var origin_col = msg['origin_cell'][1];
           var destination_row = msg['destination_cell'][0];
           var destination_col = msg['destination_cell'][1];
-          console.log(document.getElementById(destination_row).querySelector('#\\3' + destination_col + ' '));
-          document.getElementById(destination_row).querySelector('#\\3' + destination_col + ' ').classList.add( msg['moved_piece']['team']);
+          document.getElementById(destination_row).querySelector('#' + CSS.escape(destination_col)).classList.add( msg['moved_piece']['team']);
           var offboard_origin = msg['origin_cell'].includes("");
           if ( offboard_origin  === false) {
             console.log(msg['origin_cell'].includes(""));
             console.log('nooooooo');
-            extractData(document.getElementById(origin_row).querySelector('#\\3' + origin_col + ' ').querySelector('.square'));
+            extractData(document.getElementById(origin_row).querySelector('#' + CSS.escape(origin_col)).querySelector('.square'));
           }
 
-          loadData(document.getElementById(destination_row).querySelector('#\\3' + destination_col + ' ').querySelector('.square'),payload="");
+          loadData(document.getElementById(destination_row).querySelector('#' + CSS.escape(destination_col)).querySelector('.square'),payload="");
           socket.emit( 'opposing board sync' );
         }
       })
