added CSS to fade out selected grid squares

--- a/templates/session.html
+++ b/templates/session.html
@@ -21,6 +21,12 @@
       .water {
         background-color: #03c6fc;
       }
+      .selected {
+        transition: opacity .25s ease-in-out;
+        -moz-transition: opacity .25s ease-in-out;
+        -webkit-transition: opacity .25s ease-in-out;
+        opacity: 0.5;
+      }
       td {
         width: 9.09%;
         position: relative;
